--- a/packages/shared/src/components/UI/HeaderMenuList/HeaderMenuList.scss
+++ b/packages/shared/src/components/UI/HeaderMenuList/HeaderMenuList.scss
@@ -5,21 +5,72 @@
     align-items: center;
 
     .menu__list {
-        list-style: none;
         display: flex;
         gap: 1.5rem;
-        margin: 0;
-        padding: 0;
+    }
 
-        .list__li {
+    .menu__item {
+        display: flex;
+        align-items: center;
+
+
+        .menu__icon {
+            width: 2rem;
+            padding-right: 10px;
+        }
+
+        .menu__link {
             font-size: 1rem;
             color: colors.$gray;
-            text-decoration: none;
-            transition: color 0.3s;
+            position: relative;
 
-            &:hover {
-                color: colors.$yellow;
+            &::before {
+                content: '';
+                position: absolute;
+                background-color: colors.$yellow;
+                height: 2px;
+                width: 20px;
+                border-radius: 1px;
+                bottom: -6px;
+                left: 50%;
+                transform: translateX(-50%);
+                transition: width 50ms ease-in-out;
             }
         }
+
+        .menu__link:hover::before {
+            width: 90%;
+            transition: width 100ms ease-in-out;
+        }
+    }
+}
+
+
+
+
+.profile {
+    margin-left: 2.5rem;
+    .profile__icon {
+        border-radius: 50%;
+        cursor: pointer;
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            width: 1px;
+            height: 100%;
+            background-color: colors.$gray;
+            left: -18px;
+            z-index: 3;
+        }
+        img {
+            object-fit: cover;
+            object-position: center;
+            width: 40px;
+        }
+    }
+
+    .profile__name {
+        .profile__naming {}
     }
 }
