--- a/packages/shared/src/components/UI/BurgerMenu/BurgerMenu.module.scss
+++ b/packages/shared/src/components/UI/BurgerMenu/BurgerMenu.module.scss
@@ -3,10 +3,12 @@
 .header__menu {
     display: flex;
     align-items: center;
+    flex-direction: column;
 
     .menu__list {
         display: flex;
         gap: 1.5rem;
+        flex-direction: column;
     }
 
     .menu__item {
@@ -72,11 +74,5 @@
 
     .profile__name {
         .profile__naming {}
-    }
-}
-
-@media (max-width: 740px) {
-    .header__menu{
-        display: none;
     }
 }
