--- a/packages/shared/src/components/UI/BurgerMenu/BurgerMenu.module.scss
+++ b/packages/shared/src/components/UI/BurgerMenu/BurgerMenu.module.scss
@@ -1,78 +1,143 @@
 @use '@packages/shared/src/utils/styles/colorScheme' as colors;
 
-.header__menu {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.burgerMenu {
+    position: relative;
+    z-index: 9;
 
-    .menu__list {
+    .burgerIcon {
         display: flex;
-        gap: 1.5rem;
         flex-direction: column;
-    }
+        justify-content: space-around;
+        width: 2rem;
+        height: 2rem;
+        background: transparent;
+        border: none;
+        cursor: pointer;
+        position: relative;
+        z-index: 10;
 
-    .menu__item {
-        display: flex;
-        align-items: center;
-
-
-        .menu__icon {
-            width: 2rem;
-            padding-right: 10px;
+        span {
+            width: 100%;
+            height: 3px;
+            background-color: colors.$gray;
+            border-radius: 5px;
+            transition: all 0.3s linear;
         }
 
-        .menu__link {
-            font-size: 1rem;
-            color: colors.$gray;
-            position: relative;
+        &.open {
+            span:nth-child(1) {
+                transform: rotate(45deg) translate(6px, 5px);
+            }
+            span:nth-child(2) {
+                opacity: 0;
+            }
+            span:nth-child(3) {
+                transform: rotate(-45deg) translate(7px, -7px);
+            }
+        }
+    }
 
-            &::before {
-                content: '';
-                position: absolute;
-                background-color: colors.$yellow;
-                height: 2px;
-                width: 20px;
-                border-radius: 1px;
-                bottom: -6px;
-                left: 50%;
-                transform: translateX(-50%);
-                transition: width 50ms ease-in-out;
+    .header__menu {
+        position: absolute;
+        z-index: 4;
+        top: 0;
+        right: -20px;
+        height: 100vh;
+        width: 80vw;
+        background-color: colors.$white;
+        box-shadow: -4px 0 10px rgba(0, 0, 0, 0.2);
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
+        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 3rem 2rem 2rem 2rem;
+
+        &.menu__open {
+            display: flex;
+            transform: translateX(-5px) translateY(-8px);
+            
+        }
+
+        .menu__list {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            margin-bottom: 8px;
+        }
+
+        .menu__item {
+            display: flex;
+            align-items: center;
+            width: 70vw;
+
+            .menu__icon {
+                width: 2.1rem;
+                padding-right: 12px;
+                filter: invert(1);
+            }
+
+            .menu__link {
+                display: inline-block;
+                width: 100%;
+                font-size: 1.2rem;
+                font-weight: 400;
+                color: colors.$ashDarkened;
+                position: relative;
+                line-height: 2rem;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    background-color: colors.$yellow;
+                    height: 2px;
+                    width: 0;
+                    bottom: -6px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    transition: width 100ms ease-in-out;
+                }
+
+                &:hover::before {
+                    width: 90%;
+                }
             }
         }
 
-        .menu__link:hover::before {
-            width: 90%;
-            transition: width 100ms ease-in-out;
+        .profile {
+            display: flex;
+            align-items: center;
+
+            .profile__icon {
+                border-radius: 50%;
+                cursor: pointer;
+
+                img {
+                    object-fit: cover;
+                    object-position: center;
+                    width: 40px;
+                }
+            }
+
+            .profile__name {
+                margin-left: 1rem;
+
+                .profile__naming {
+                    font-size: 1rem;
+                    color: colors.$gray;
+                }
+            }
         }
     }
 }
 
-
-
-
-.profile {
-    margin-left: 2.5rem;
-    .profile__icon {
-        border-radius: 50%;
-        cursor: pointer;
-        position: relative;
-        &::before {
-            content: '';
-            position: absolute;
-            width: 1px;
-            height: 100%;
-            background-color: colors.$gray;
-            left: -18px;
-            z-index: 3;
-        }
-        img {
-            object-fit: cover;
-            object-position: center;
-            width: 40px;
-        }
-    }
-
-    .profile__name {
-        .profile__naming {}
-    }
+.burgerMenu__hr {
+    display: block;
+    width: 70vw;
+    height: 1px;
+    background-color: colors.$gray;
+    margin-bottom: 12px;
 }
