--- a/packages/shared/src/components/UI/HeaderToolsList/HeaderToolsList.module.scss
+++ b/packages/shared/src/components/UI/HeaderToolsList/HeaderToolsList.module.scss
@@ -1,26 +1,33 @@
 @use '@packages/shared/src/utils/styles/colorScheme' as colors;
 
 .header__tools {
+    flex: 2;
+
     .tools__btn {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      color: colors.$white;
-      font-size: 1rem;
-      cursor: pointer;
-
-      .tool__img {
-        width: 20px;
-        height: 20px;
-        object-fit: cover;
-      }
-
-      &:hover {
-        color: colors.$yellow;
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        gap: 0.5rem;
+        color: colors.$white;
+        font-size: 1rem;
+        cursor: pointer;
 
         .tool__img {
-          filter: brightness(1.5);
+            width: 24px;
+            object-fit: cover;
         }
-      }
+
+        &:hover {
+            color: colors.$yellow;
+        }
+    }
+}
+
+
+@media (max-width: 866px) {
+    .tools__btn {
+        p {
+            display: none;
+        }
     }
 }
