--- a/packages/shared/src/utils/styles/resetStyles.scss
+++ b/packages/shared/src/utils/styles/resetStyles.scss
@@ -35,3 +35,7 @@ img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*--------------------*/
+
+body {
+	position: relative;
+}
