--- a/packages/shared/src/utils/styles/HeaderSearchPie.module.scss
+++ b/packages/shared/src/utils/styles/HeaderSearchPie.module.scss
@@ -4,8 +4,9 @@
     position: sticky;
     background-color: colors.$black;
     color: colors.$white;
-    top: 0;
-    z-index: 9999;
+    top: -1px;
+    margin-bottom: 8px;
+    z-index: 1;
 
     .header__main {
         max-width: 1440px;
