--- a/services/shop/src/utils/styles/CatalogList.module.scss
+++ b/services/shop/src/utils/styles/CatalogList.module.scss
@@ -2,9 +2,8 @@
 
 
 .catalog {
-    max-width: 300px;
-    padding: 10px 10px 10px 0;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    min-width: 292px;
+    margin-right: 8px;
 
     .category__item {
         display: flex;
@@ -69,3 +68,8 @@
     }
 }
 
+@media(max-width: 1174px) {
+    .catalog{
+        display: none;
+    }
+}
