--- a/services/shop/src/utils/styles/BannersCarousel.module.scss
+++ b/services/shop/src/utils/styles/BannersCarousel.module.scss
@@ -1,20 +1,24 @@
 .stage {
-    display: flex;
-    flex-wrap: nowrap;
-    max-width: 100%;
-    overflow: hidden;
-
-    .stage__item {
-        flex: 0 0 100%;
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px;
+    .stage__body {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-wrap: nowrap;
+        overflow: hidden;
+        max-width: 100%;
 
-        .stage__bannerImg {
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-            object-position: center;
+        .stage__item {
+            flex: 0 0 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .stage__bannerImg {
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+                object-position: center;
+            }
         }
     }
 }
