logo component animation & adaptive link to constructructor

--- a/packages/shared/src/components/UI/SearchInput/SearchInput.module.scss
+++ b/packages/shared/src/components/UI/SearchInput/SearchInput.module.scss
@@ -12,10 +12,11 @@
     object-fit: cover;
     object-position: center;
     width: 24px;
-    left: 6px;
+    right: 8px;
     top: 6px;
     z-index: 5;
     height: 24px;
+    cursor: pointer;
   }
     .search__input {
       padding: 0.5rem 0.5rem 0.5rem 2.3rem;
