--- a/packages/shared/src/components/UI/CompanyLogo/CompanyLogo.scss
+++ b/packages/shared/src/components/UI/CompanyLogo/CompanyLogo.scss
@@ -13,6 +13,8 @@
 			object-fit: contain;
 			transform: rotate(-15deg);
 			filter: invert(100%);
+			transform-origin: top 20px;
+			animation: shakeAnimation 2s 10s ease-in-out infinite;
 		}
 	}
 
@@ -24,5 +26,17 @@
 		.company__name {
 			font-size: 1.5rem;
 		}
+	}
+}
+
+@keyframes shakeAnimation {
+	0%, 100% {
+		transform: rotate(-15deg) translate(0, 0);
+	}
+	10%, 30%, 50%, 70%, 90% {
+		transform: rotate(-13deg) translate(2px, -2px);
+	}
+	20%, 40%, 60%, 80% {
+		transform: rotate(-17deg) translate(-2px, 2px);
 	}
 }
