--- a/services/shop/src/components/UI/FilterColor/FilterColor.module.scss
+++ b/services/shop/src/components/UI/FilterColor/FilterColor.module.scss
@@ -15,6 +15,7 @@
     align-items: center;
     border-radius: 8px;
     margin-right: 6px;
+    margin-bottom: 6px;
     cursor: pointer;
     transition: all 50ms ease;
     &:hover {
