--- a/packages/shared/src/components/UI/ClosePopupCross/ClosePopupCross.module.scss
+++ b/packages/shared/src/components/UI/ClosePopupCross/ClosePopupCross.module.scss
@@ -8,8 +8,9 @@
     border-radius: 50%;
     position: relative;
     cursor: pointer;
-    margin-left: calc(100% - 32px);
+    // margin-left: calc(100% - 32px);
     margin-bottom: 4px;
+    margin-left: 4px;
 
     .cross {
         position: relative;
