--- a/services/shop/src/components/UI/CountControl/CountControl.module.scss
+++ b/services/shop/src/components/UI/CountControl/CountControl.module.scss
@@ -1,9 +1,12 @@
 @use '@packages/shared/src/utils/styles/colorScheme' as colors;
+
 .counterBtn {
     background: colors.$yellow;
-    border: none;
-    padding: 4px 8px;
+    width: 20px;
+    line-height: 1.4;
+    font-weight: 900;
+    padding: 2px 6px;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 8px;
     color: colors.$white
-  }
+}
