--- a/services/shop/src/utils/styles/BasketProductsCard.module.scss
+++ b/services/shop/src/utils/styles/BasketProductsCard.module.scss
@@ -1,26 +1,45 @@
 @use '@packages/shared/src/utils/styles/colorScheme' as colors;
 
 .cartItem {
-    // display: flex;
-    // align-items: center;
+    display: flex;
+    align-items: center;
     gap: 16px;
     padding: 12px;
     border-bottom: 1px solid colors.$gray;
-  }
-  
-  .image {
-    width: 60px;
-    height: 60px;
+}
+
+.image {
+    width: 90px;
+    height: 90px;
     object-fit: cover;
+    object-position: center;
     border-radius: 8px;
-  }
-  
-  .details {
+}
+
+.details {
     flex: 1;
-  }
-  
-  .name {
+    display: flex;
+    justify-content: space-between;
+}
+
+.name {
     font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 8px;
-  }
+    font-weight: 500;
+    width: 100%;
+    padding-right: 12px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.price {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    margin-left: 4rem;
+}
+
+.productView {
+    width: 90px;
+}
