Added product ID to the database. Added cart functionality. Added green color to the button when adding a product to the cart

--- a/packages/shared/src/components/UI/ButtonImage/ButtonImage.module.scss
+++ b/packages/shared/src/components/UI/ButtonImage/ButtonImage.module.scss
@@ -4,6 +4,9 @@
     object-fit: cover;
     object-position: center;
     background: transparent;
+    &:active {
+        filter: hue-rotate(50deg);
+    }
     cursor: pointer;
     .button__image {
         object-fit: cover;
