--- a/services/shop/src/utils/styles/BasketProductsCard.module.scss
+++ b/services/shop/src/utils/styles/BasketProductsCard.module.scss
@@ -17,9 +17,10 @@
 }
 
 .details {
-    flex: 1;
     display: flex;
     justify-content: space-between;
+    gap: 16px;
+    width: 100%;
 }
 
 .name {
@@ -35,6 +36,7 @@
 
 .price {
     display: flex;
+    flex: 1;
     flex-direction: column;
     gap: 8px;
     margin-left: 4rem;
