The product card has been moved to shared. A small decomposition in the run-up to the implementation of the database in the product service

--- a/services/product/src/components/UI/ColorOptions/ColorOptions.module.scss
+++ b/services/product/src/components/UI/ColorOptions/ColorOptions.module.scss
@@ -5,9 +5,9 @@
     gap: 12px;
 
     .colorButton {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
+      width: 50px;
+      height: 28px;
+      border-radius: 20px;
       border: 2px solid colors.$white;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 
