--- a/packages/shared/src/components/UI/FilterColor/FilterColor.module.scss
+++ b/packages/shared/src/components/UI/FilterColor/FilterColor.module.scss
@@ -4,22 +4,26 @@
 }
 
 .color__checkbox:checked + .color__ditch {
-    background-color: color-mix(in srgb, colors.$yellow, transparent 30%)
+    // background-color: color-mix(in srgb, colors.$yellow, transparent 30%)
+    box-shadow: 0 0 0 2px colors.$white, 0 0 0 4px colors.$yellow;
 }
 
 .color__ditch{
     display: flex;
     flex-wrap: nowrap;
     padding: 6px;
-    background-color: color-mix(in srgb, colors.$gray 50%, transparent);
+    // background-color: color-mix(in srgb, colors.$gray 50%, transparent);
+    box-shadow: 0 0 0 1px colors.$white, 0 0 0 2px colors.$ash;
+    background-color: transparent;
     align-items: center;
     border-radius: 8px;
-    margin-right: 6px;
-    margin-bottom: 6px;
+    margin-right: 10px;
+    margin-bottom: 10px;
     cursor: pointer;
     transition: all 50ms ease;
     &:hover {
-        background-color: color-mix(in srgb, colors.$gray 35%, transparent);
+        // background-color: color-mix(in srgb, colors.$gray 35%, transparent);
+        box-shadow: 0 0 0 2px colors.$white, 0 0 0 4px colors.$yellow;
         transition: all 100ms ease;
     }
     .ditch__shade {
