--- a/packages/shared/src/components/UI/HeaderMenuList/HeaderMenuList.module.scss
+++ b/packages/shared/src/components/UI/HeaderMenuList/HeaderMenuList.module.scss
@@ -21,7 +21,7 @@
 
         .menu__link {
             font-size: 1rem;
-            color: colors.$gray;
+            color: colors.$white;
             position: relative;
 
             &::before {
