--- a/packages/shared/src/utils/styles/ProductCard.module.scss
+++ b/packages/shared/src/utils/styles/ProductCard.module.scss
@@ -5,14 +5,20 @@
     flex-direction: column;
     max-height: 344px;
     background-color: colors.$white;
-    border-radius: 12px;
+    border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    // transition: transform 0.2s ease, box-shadow 0.2s ease;
+
+    // &:hover {
+    //     transform: translateY(-5px);
+    //     box-shadow: 0 6px 14px rgba(0, 0, 0, 0.15);
+    // }
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s;
 
     &:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 6px 14px rgba(0, 0, 0, 0.15);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 }
 
