--- a/packages/shared/src/utils/styles/ProductCard.module.scss
+++ b/packages/shared/src/utils/styles/ProductCard.module.scss
@@ -7,6 +7,7 @@
     background-color: colors.$white;
     border-radius: 8px;
     overflow: hidden;
+    cursor: pointer;
     // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     // transition: transform 0.2s ease, box-shadow 0.2s ease;
 
