--- a/services/product/src/utils/styles/ColorSelection.module.scss
+++ b/services/product/src/utils/styles/ColorSelection.module.scss
@@ -4,6 +4,7 @@
     .colorTitle {
         font-weight: bold;
         margin-bottom: 12px;
+        font-size: 16px;
 
         .selectedColor {
             font-weight: normal;
