--- a/services/product/src/utils/styles/ProductSizeSelection.module.scss
+++ b/services/product/src/utils/styles/ProductSizeSelection.module.scss
@@ -7,9 +7,10 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 0px;
+      margin-bottom: 12px;
 
       .sizeTitle {
+        font-size: 16px;
         font-weight: bold;
         margin-top: 4px;
       }
