--- a/packages/shared/src/components/UI/CompanyLogo/CompanyLogo.scss
+++ b/packages/shared/src/components/UI/CompanyLogo/CompanyLogo.scss
@@ -14,7 +14,7 @@
 			transform: rotate(-15deg);
 			filter: invert(100%);
 			transform-origin: top 20px;
-			animation: shakeAnimation 2s 10s ease-in-out infinite;
+			// видаляємо анімацію тут
 		}
 	}
 
@@ -25,6 +25,13 @@
 
 		.company__name {
 			font-size: 1.5rem;
+			color: colors.$white;
+		}
+	}
+
+	&:hover {
+		.logo__img {
+			animation: shakeAnimation 2s ease-in-out;
 		}
 	}
 }
