--- a/services/product/src/utils/styles/ProductDetailsAccordion.module.scss
+++ b/services/product/src/utils/styles/ProductDetailsAccordion.module.scss
@@ -6,7 +6,7 @@
     .accordionItem {
       margin-bottom: 16px;
 
-      .accordionButton {
+      .accordionTitle {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -17,16 +17,40 @@
 
       .accordionContent {
         margin-top: 8px;
-        color: colors.$ashDarkened;
+        // color: colors.$ashDarkened;
 
         .detailsList {
-          list-style: disc;
-          padding-left: 20px;
-
+          line-height: 1.5;
           li {
-            margin-bottom: 8px;
+            padding-left: 20px;
+        
+            .row {
+              display: flex;
+              align-items: center;
+              width: 100%;
+            
+              .label {
+                flex-shrink: 0;
+              }
+            
+              .dash {
+                flex-grow: 1;
+                height: 1px;
+                background-color: colors.$ash;
+                margin: 0 8px;
+              }
+            
+              .value {
+                flex-shrink: 0;
+                white-space: nowrap;
+              }
+            }
+            
+            }
           }
         }
+        
+        
       }
     }
-  }
+  
