--- a/services/product/src/components/UI/ProductTitle/ProductTitle.module.scss
+++ b/services/product/src/components/UI/ProductTitle/ProductTitle.module.scss
@@ -1,5 +1,17 @@
+@use '@packages/shared/src/utils/styles/colorScheme' as colors;
+
 .productTitle {
-    font-size: 30px;
-    font-weight: bold;
-    margin-bottom: 8px;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 8px;
+
+}
+
+.raitContainer {
+  margin-bottom: 8px;
+
+  .rait {
+    font-size: 20px;
+    color: colors.$yellow
   }
+}
