--- a/services/product/src/utils/styles/ReviewsList.module.scss
+++ b/services/product/src/utils/styles/ReviewsList.module.scss
@@ -1,34 +1,7 @@
 @use '@packages/shared/src/utils/styles/colorScheme' as colors;
+
 .reviewsList {
     margin-top: 32px;
-
-    .reviewItem {
-        border-bottom: 1px solid #e5e7eb;
-        padding-bottom: 24px;
-        margin-bottom: 24px;
-
-        .reviewHeader {
-            margin-bottom: 8px;
-
-            .reviewRating {
-                color: colors.$yellow;
-                margin-bottom: 4px;
-            }
-
-            .reviewerName {
-                font-weight: bold;
-            }
-
-            .reviewDate {
-                color: colors.$ashDarkened;
-                font-size: 14px;
-            }
-        }
-
-        .reviewText {
-            color: colors.$ashDarkened;
-        }
-    }
 }
 
 .loadMoreButton {
@@ -38,6 +11,7 @@
     font-weight: bold;
     margin: 0 auto;
     display: block;
+    transition: all 0.2s ease;
 
     &:hover {
         background: #f3f4f6;
