--- a/packages/shared/src/utils/styles/ProductCard.module.scss
+++ b/packages/shared/src/utils/styles/ProductCard.module.scss
@@ -31,6 +31,7 @@
     border-bottom: 1px solid colors.$ash;
     object-fit: cover;
     object-position: center;
+    position: relative;
 
     img {
         width: 100%;
