--- a/services/product/src/utils/styles/ReviewAdd.module.scss
+++ b/services/product/src/utils/styles/ReviewAdd.module.scss
@@ -41,7 +41,9 @@
 
       .textareaInput {
         max-width: 520px;
+        min-width: 520px;
         max-height: 100px;
+
       }
       .textInput,
       .textareaInput {
@@ -64,6 +66,7 @@
       padding: 8px 24px;
       border-radius: 4px;
       font-weight: bold;
+      cursor: pointer;
 
       &:hover {
         background: rgba(colors.$black, 0.9);
