--- a/services/product/src/components/UI/ProductGalleryThumbnail/ProductGalleryThumbnail.module.scss
+++ b/services/product/src/components/UI/ProductGalleryThumbnail/ProductGalleryThumbnail.module.scss
@@ -18,8 +18,10 @@
         border-radius: 4px;
         border: 1px solid colors.$gray;
         overflow: hidden;
+        background-color: colors.$white;
         transition: border-color 0.3s;
         cursor: pointer;
+        padding: 12px;
 
         &:hover {
             border-color: colors.$yellow;
