Improved order form

--- a/services/shop/src/utils/styles/BasketProductsCard.module.scss
+++ b/services/shop/src/utils/styles/BasketProductsCard.module.scss
@@ -19,6 +19,7 @@
 .details {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 16px;
     width: 100%;
 }
