--- a/packages/shared/src/components/UI/ClosePopupCross/ClosePopupCross.module.scss
+++ b/packages/shared/src/components/UI/ClosePopupCross/ClosePopupCross.module.scss
@@ -7,17 +7,18 @@
     backdrop-filter: blur(10px);
     border-radius: 50%;
     position: absolute;
-    right: 0;
+    right: -150px;
     top: -38px;
     cursor: pointer;
     margin-bottom: 4px;
     margin-left: 4px;
-
+    z-index: 200;
     .cross {
         position: relative;
         width: 24px;
         height: 24px;
         cursor: pointer;
+        
 
         &__line {
             position: absolute;
