The cart design has been significantly improved, but you need to tighten up the colors with shered

--- a/packages/shared/src/components/UI/ButtonOrder/ButtonOrder.module.scss
+++ b/packages/shared/src/components/UI/ButtonOrder/ButtonOrder.module.scss
@@ -31,12 +31,11 @@
 // }
 
 
-.order {
-
     .orderButton {
         width: 100%;
+        max-height: 40px;
         position: relative;
-        padding: 12px 18px;
+        padding: 10px 18px;
         font-size: 16px;
         font-weight: 600;
         color: white;
@@ -57,6 +56,3 @@
             box-shadow: 0 3px 0 colors.$golden, 0 2px 5px rgba(0, 0, 0, 0.2);
         }
     }
-
-
-}
