--- a/services/product/src/utils/styles/ReviewAdd.module.scss
+++ b/services/product/src/utils/styles/ReviewAdd.module.scss
@@ -41,7 +41,7 @@
 
       .textareaInput {
         max-width: 520px;
-        min-width: 520px;
+        // min-width: 100px;
         max-height: 100px;
 
       }
