--- a/packages/shared/src/components/UI/BurgerMenu/BurgerMenu.module.scss
+++ b/packages/shared/src/components/UI/BurgerMenu/BurgerMenu.module.scss
@@ -21,16 +21,18 @@
             height: 3px;
             background-color: colors.$gray;
             border-radius: 5px;
-            transition: all 0.3s linear;
+            transition: all 0.05s linear;
         }
 
         &.open {
             span:nth-child(1) {
                 transform: rotate(45deg) translate(6px, 5px);
             }
+
             span:nth-child(2) {
                 opacity: 0;
             }
+
             span:nth-child(3) {
                 transform: rotate(-45deg) translate(7px, -7px);
             }
@@ -43,7 +45,7 @@
         right: -20px;
         height: 100vh;
         width: 80vw;
-        background-color: colors.$white;
+        // background-color: colors.$white;
         box-shadow: -4px 0 10px rgba(0, 0, 0, 0.2);
         transform: translateX(100%);
         transition: transform 0.3s ease-in-out;
@@ -52,11 +54,19 @@
         align-items: flex-start;
         padding: 3rem 2rem 2rem 2rem;
         z-index: 9998;
+        backdrop-filter: blur(30px);
 
         &.menu__open {
             display: flex;
             transform: translateX(-5px) translateY(-8px);
-            
+            padding-top: 8rem;
+            // background: linear-gradient(135deg, colors.$white 60%, colors.$gray 100%);
+            width: 70vw;
+            @media(max-width: 500px){
+                width: 100vw;
+                align-self: center;
+                // justify-content: center;
+            }
         }
 
         .menu__list {
@@ -67,25 +77,34 @@
             flex-direction: column;
             gap: 1rem;
             margin-bottom: 8px;
+            text-align: center;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: nowrap;
         }
 
         .menu__item {
-            display: flex;
-            align-items: center;
-            width: 70vw;
+            &:not(:last-child){
+                margin-bottom: 12px;
+            }
+            // width: 70vw;
+            // display: grid;
+            // grid-template-columns: 1fr 10fr;
 
             .menu__icon {
-                width: 2.1rem;
-                padding-right: 12px;
-                filter: invert(1);
+                width: 1.7rem;
+                // padding-right: 12px;
+                // filter: invert(1);
             }
 
             .menu__link {
                 display: inline-block;
                 width: 100%;
-                font-size: 1.2rem;
+                font-size: 1.5rem;
                 font-weight: 400;
-                color: colors.$ashDarkened;
+                color: colors.$white;
                 position: relative;
                 line-height: 2rem;
 
@@ -110,6 +129,11 @@
         .profile {
             display: flex;
             align-items: center;
+            transition: transform 0.3s;
+            cursor: pointer;
+            &:hover {
+                transform: scale(1.03);
+            }
 
             .profile__icon {
                 border-radius: 50%;
@@ -126,8 +150,8 @@
                 margin-left: 1rem;
 
                 .profile__naming {
-                    font-size: 1rem;
-                    color: colors.$gray;
+                    font-size: 1.2rem;
+                    color: colors.$white;
                 }
             }
         }
