--- a/packages/shared/src/components/UI/InputData/InputData.module.scss
+++ b/packages/shared/src/components/UI/InputData/InputData.module.scss
@@ -1,7 +1,11 @@
 @use '@packages/shared/src/utils/styles/colorScheme' as colors;
 
 .inputContainer {
-    margin-bottom: 16px;
+    &:not(:last-child){
+      margin-bottom: 16px;
+    }
+    max-width: 400px;
+    flex: 1;
 }
 .input {
   width: 100%;
