--- a/services/shop/src/utils/styles/BasketSummary.module.scss
+++ b/services/shop/src/utils/styles/BasketSummary.module.scss
@@ -4,6 +4,8 @@
     grid-column: 1 / -1;
     display: grid;
     grid-template-columns: 2fr 1fr;
+    max-height: fit-content;
+    align-content: end;
 }
 
 .display {
@@ -26,8 +28,4 @@
         }
     }
 
-}
-
-.order {
-    .orderButton {}
 }
