--- a/services/shop/src/utils/styles/PopupBasket.module.scss
+++ b/services/shop/src/utils/styles/PopupBasket.module.scss
@@ -1,3 +1,4 @@
+@use '@packages/shared/src/utils/styles/colorScheme' as colors;
 .modalOverlay {
     position: fixed;
     top: 0;
@@ -9,4 +10,30 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    align-content: center;
+    padding: 0 12px;
+
+    .modalContent, .basket {
+        width: 1300px;
+        height: 700px;
+        background: colors.$white;
+        border-radius: 24px;
+    }
+    .modalContent {
+        
+        padding: 24px;
+        display: grid;
+        grid-template-columns: 1.8fr 1fr;
+        grid-template-rows: 1fr auto;
+        gap: 24px;
+        position: relative;
+        overflow-y: auto;
+        @media(max-width: 930px){
+            grid-template-columns: 1fr;
+            grid-template-rows: auto 4fr auto auto;
+        }
+        
+    }
+    
 }
+
