--- a/services/shop/src/utils/styles/BasketProductsCard.module.scss
+++ b/services/shop/src/utils/styles/BasketProductsCard.module.scss
@@ -33,6 +33,9 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    @media(max-width: 570px) {
+        display: none;
+    }
 }
 
 .price {
