--- a/packages/shared/src/utils/styles/resetStyles.scss
+++ b/packages/shared/src/utils/styles/resetStyles.scss
@@ -1,4 +1,4 @@
-@use './colorScheme.scss' as colors;
+@use '@packages/shared/src/utils/styles/colorScheme' as colors;
 *{
 	padding: 0;
 	margin: 0;
@@ -46,31 +46,3 @@ body {
 	position: relative;
 }
 
-
-
-
-* {
-    scrollbar-width: thin; /* Firefox */
-    scrollbar-color: colors.$golden colors.$black; /* Firefox */
-  }
-  
-  /* WebKit (Chrome, Edge, Safari) */
-  ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-  
-  ::-webkit-scrollbar-track {
-    background: colors.$black;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background: linear-gradient(180deg, colors.$golden, colors.$yellow);
-    border-radius: 10px;
-    border: 2px solid colors.$black;
-    transition: background 0.3s ease;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(180deg, colors.$yellow, colors.$golden);
-  }
