destructuring of styles in shared is complete

--- a/packages/shared/src/utils/styles/colorScheme.scss
+++ b/packages/shared/src/utils/styles/colorScheme.scss
@@ -5,3 +5,8 @@ $golden: #e4ab0e;
 $gray: #ccc;
 $ash: #acacac;
 $ashDarkened: #788387;
+
+$whiteText: white;
+$grayText: #ccc;
+$ashText: #acacac;
+$ashDarkenedText: #788387;
