--- a/packages/shared/src/utils/styles/modules/HeaderSearchPie.module.scss
+++ b/packages/shared/src/utils/styles/modules/HeaderSearchPie.module.scss
@@ -1,4 +1,5 @@
 @use '@packages/shared/src/utils/styles/colorScheme' as colors;
+@use '@packages/shared/src/utils/styles/consts' as consts;
 
 .header_second {
     position: sticky;
@@ -9,7 +10,7 @@
     z-index: 8;
 
     .header__main {
-        max-width: 1440px;
+        max-width: consts.$clientWidth;
         display: flex;
         justify-content: space-between;
         align-items: center;
