--- a/packages/shared/src/utils/styles/modules/PopupFilterBar.module.scss
+++ b/packages/shared/src/utils/styles/modules/PopupFilterBar.module.scss
@@ -1,3 +1,4 @@
+@use '@packages/shared/src/utils/styles/colorScheme' as colors;
 .modalOverlay {
     position: fixed;
     top: 0;
@@ -15,7 +16,7 @@
     position: relative;
     height: 100vh;
     width: 350px;
-    background: white;
+    background: colors.$white;
     padding: 30px;
     box-shadow: -10px 0px 20px rgba(0, 0, 0, 0.3);
     animation: slideIn 0.3s ease-out;
