--- a/services/shop/src/utils/styles/modules/BasketDelivery.module.scss
+++ b/services/shop/src/utils/styles/modules/BasketDelivery.module.scss
@@ -24,7 +24,7 @@
   }
 
   .section {
-    background-color: #f9f9f9;
+    background-color: colors.$milkish;
     border-radius: 16px;
     padding: 1.5rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.03);
@@ -47,7 +47,7 @@
     height: 40px;
     padding: 8px 16px;
     margin-top: 18px;
-    background-color: #ffbe0b;
+    background-color: colors.$yellow;
     border: none;
     border-radius: 8px;
     font-weight: 500;
