--- a/services/product/src/utils/styles/modules/ProductDetailedSelection.module.scss
+++ b/services/product/src/utils/styles/modules/ProductDetailedSelection.module.scss
@@ -51,7 +51,7 @@
       font-weight: bold;
 
       &:hover {
-        background: #f3f4f6;
+        background: colors.$milkish;
       }
 
       i {
