--- a/services/product/src/utils/styles/modules/ProductGallery.module.scss
+++ b/services/product/src/utils/styles/modules/ProductGallery.module.scss
@@ -1,3 +1,4 @@
+@use '@packages/shared/src/utils/styles/colorScheme' as colors;
 .productGallery {
     @media (min-width: 1024px) {
       width: 50%;
@@ -8,7 +9,7 @@
       margin-bottom: 0px;
       border-radius: 8px;
       overflow: hidden;
-      background: #f3f4f6;
+      background: colors.$milkish;
       height: 580px;
 
       .mainImage {
