--- a/packages/shared/src/components/UI/BurgerMenu/BurgerMenu.module.scss
+++ b/packages/shared/src/components/UI/BurgerMenu/BurgerMenu.module.scss
@@ -125,43 +125,6 @@
                 }
             }
         }
-
-        .profile {
-            padding: 10px 16px;
-            display: flex;
-            align-items: center;
-            width: 100%;
-            border-radius: 16px;
-            border: 1px solid colors.$white;
-            background-color: color-mix(in srgb, colors.$white 10%, transparent 70%);
-            // backdrop-filter: blur(30px);
-            transition: transform 0.3s;
-            cursor: pointer;
-            &:hover {
-                transform: scale(1.03);
-            }
-
-            .profile__icon {
-                border-radius: 50%;
-                cursor: pointer;
-
-                img {
-                    object-fit: cover;
-                    object-position: center;
-                    width: 40px;
-                }
-            }
-
-            .profile__name {
-                margin-left: 1rem;
-                width: 100%;
-
-                .profile__naming {
-                    font-size: 1.2rem;
-                    color: colors.$white;
-                }
-            }
-        }
     }
 }
 
@@ -170,5 +133,5 @@
     width: 70vw;
     height: 1px;
     background-color: colors.$gray;
-    margin-bottom: 12px;
+    margin: 0 auto 12px auto;
 }
